# o11y_service

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp  prometheus.yml
.github/workflows/: docker-push.yml
crow-server/: CMakeLists.txt  Dockerfile  config.json  load.html  main.cpp
faker-server/: index.js  package.json
grafana-dashboards/: node-dashboard.json  redis-dashboard.json
loadtest/: Dockerfile  load.yaml  tank_listener.py
